crates/tests/src/snapshots/fe_compiler_tests__compile_errors__duplicate_field_in_contract.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: a contract field with the same name already exists
  ┌─ compile_errors/duplicate_field_in_contract.fe:3:5
  │
3 │     bar: u8
  │     ^^^^^^^ Conflicting definition of field `bar`
  │
  = Note: Give one of the `bar` fields a different name


